kyverno/policies/namespaces/ensure-ns-name-label.yaml
apiVersion: policies.kyverno.io/v1
kind: MutatingPolicy
metadata:
  name: ensure-ns-name-label
  annotations:
    policies.kyverno.io/title: Ensure Namespace Name Labels
    policies.kyverno.io/category: Namespace
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Namespace, Label
    policies.kyverno.io/description: >-
      Make sure every namespace has a `name` label that matches the actual
      namespace name.
spec:
  matchConstraints:
    resourceRules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - namespaces
  matchConditions:
    - name: needs-name-label
      expression: >-
        !('name' in object.metadata.?labels.orValue({})) || object.metadata.labels['name'] != object.metadata.name
  mutations:
    - patchType: ApplyConfiguration
      applyConfiguration:
        expression: >-
          Object{
            metadata: Object.metadata{
              labels: {
                "name": object.metadata.name
              }
            }
          }
