kyverno/policies/namespaces/test/patched-resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: ns-with-no-label
  name: ns-with-no-label
