kyverno/policies/namespaces/test/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-with-no-label
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    uw.systems/delete-allowed: "true"
  name: valid-delete-annotation
---
apiVersion: v1
kind: Namespace
metadata:
  name: no-annotation-req-to-update
---
apiVersion: v1
kind: Namespace
metadata:
  name: no-valid-delete-annotation
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    uw.systems/owner: system
  name: valid-owner
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    uw.systems/owner: invalid
  name: invalid-owner
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: missing-owner
  name: missing-owner
