kyverno/policies/namespaces/test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-namespace-policies
spec:
  steps:
    - name: apply-policies
      try:
        - apply:
            file: ../ensure-ns-name-label.yaml
        - apply:
            file: ../restrict-limitrange-values.yaml
        - apply:
            file: ../require-annotation-to-delete-ns.yaml
        - apply:
            file: ../require-ns-owner-label.yaml

    - name: test-require-ns-owner-label
      try:
        - apply:
            resource:
              apiVersion: v1
              kind: Namespace
              metadata:
                name: missing-owner
            expect:
              - check:
                  ($error != null): true
                  "(contains(to_string($error), 'The label `uw.systems/owner` is required'))": true

        - apply:
            resource:
              apiVersion: v1
              kind: Namespace
              metadata:
                name: invalid-owner
                labels:
                  uw.systems/owner: invalid
            expect:
              - check:
                  ($error != null): true
                  "(contains(to_string($error), 'The label `uw.systems/owner` is required'))": true

        - apply:
            resource:
              apiVersion: v1
              kind: Namespace
              metadata:
                name: valid-owner
                labels:
                  uw.systems/owner: system
            expect:
              - check:
                  ($error == null): true

    - name: test-ensure-ns-name-label
      try:
        - apply:
            resource:
              apiVersion: v1
              kind: Namespace
              metadata:
                name: ns-with-no-name-label
                labels:
                  uw.systems/owner: system
        - assert:
            resource:
              apiVersion: v1
              kind: Namespace
              metadata:
                name: ns-with-no-name-label
                labels:
                  uw.systems/owner: system
                  name: ns-with-no-name-label

    - name: test-require-annotation-to-delete-ns
      try:
        - apply:
            resource:
              apiVersion: v1
              kind: Namespace
              metadata:
                name: no-valid-delete-annotation
                labels:
                  uw.systems/owner: system
        - apply:
            resource:
              apiVersion: v1
              kind: Namespace
              metadata:
                name: valid-delete-annotation
                annotations:
                  uw.systems/delete-allowed: "true"
                labels:
                  uw.systems/owner: system

        - delete:
            ref:
              apiVersion: v1
              kind: Namespace
              name: no-valid-delete-annotation
            expect:
              - check:
                  ($error != null): true
                  "(contains(to_string($error), 'must be annotated with: uw.systems/delete-allowed:'))": true
        - delete:
            ref:
              apiVersion: v1
              kind: Namespace
              name: valid-delete-annotation
            expect:
              - check:
                  ($error == null): true

    - name: test-restrict-limitrange-values
      try:
        - apply:
            resource:
              apiVersion: v1
              kind: LimitRange
              metadata:
                name: invalid-max-cpu-too-high
                namespace: default
              spec:
                limits:
                  - type: Container
                    max:
                      cpu: "7"
                      memory: 24Gi
            expect:
              - check:
                  ($error != null): true
                  "(contains(to_string($error), 'LimitRange max.cpu cannot exceed 6 cores'))": true

        - apply:
            resource:
              apiVersion: v1
              kind: LimitRange
              metadata:
                name: invalid-max-memory-too-high
                namespace: default
              spec:
                limits:
                  - type: Container
                    max:
                      cpu: "6"
                      memory: 25Gi
            expect:
              - check:
                  ($error != null): true
                  "(contains(to_string($error), 'LimitRange max.memory cannot exceed 24Gi'))": true

        - apply:
            resource:
              apiVersion: v1
              kind: LimitRange
              metadata:
                name: invalid-default-cpu-too-high
                namespace: default
              spec:
                limits:
                  - type: Container
                    default:
                      cpu: "7"
                      memory: 24Gi
            expect:
              - check:
                  ($error != null): true
                  "(contains(to_string($error), 'LimitRange default.cpu cannot exceed 6 cores'))": true

        - apply:
            resource:
              apiVersion: v1
              kind: LimitRange
              metadata:
                name: invalid-default-memory-too-high
                namespace: default
              spec:
                limits:
                  - type: Container
                    default:
                      cpu: "6"
                      memory: 25Gi
            expect:
              - check:
                  ($error != null): true
                  "(contains(to_string($error), 'LimitRange default.memory cannot exceed 24Gi'))": true

        - apply:
            resource:
              apiVersion: v1
              kind: LimitRange
              metadata:
                name: valid-limitrange
                namespace: default
              spec:
                limits:
                  - type: Container
                    default:
                      cpu: "6"
                      memory: 24Gi
                    max:
                      cpu: "6"
                      memory: 24Gi
            expect:
              - check:
                  ($error == null): true

        - apply:
            resource:
              apiVersion: v1
              kind: LimitRange
              metadata:
                name: valid-limitrange-default-values-only
                namespace: default
              spec:
                limits:
                  - type: Container
                    default:
                      cpu: "6"
                      memory: 24Gi
            expect:
              - check:
                  ($error == null): true

    # Tear down delete policy to allow Chainsaw cleanup
    - name: remove-delete-policy
      try:
        - delete:
            ref:
              apiVersion: policies.kyverno.io/v1
              kind: ValidatingPolicy
              name: require-delete-annotation-ns-label
