kyverno/policies/namespaces/test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-namespace-policies

policies:
  - ../ensure-ns-name-label.yaml
  - ../require-annotation-to-delete-ns.yaml
  - ../require-ns-owner-label.yaml

resources:
  - resources.yaml

variables: values.yaml

results:
  - policy: ensure-ns-name-label
    isMutatingPolicy: true
    resources: ["ns-with-no-label"]
    patchedResources: patched-resources.yaml
    kind: Namespace
    result: pass

  # testing DELETE operations are not yet supported
  # - policy: require-delete-annotation-ns-label
  #   resources: ["valid-delete-annotation"]
  #   kind: Namespace
  #   result: pass
  # - policy: require-delete-annotation-ns-label
  #   resources: ["no-annotation-req-to-update"]
  #   kind: Namespace
  #   result: skip
  # - policy: require-delete-annotation-ns-label
  #   resources: ["no-valid-delete-annotation"]
  #   kind: Namespace
  #   result: fail

  - policy: require-ns-owner-label
    resources: ["valid-owner"]
    kind: Namespace
    result: pass
  - policy: require-ns-owner-label
    resources: ["invalid-owner", "missing-owner"]
    kind: Namespace
    result: fail
