kyverno/policies/namespaces/test/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
  - name: require-delete-annotation-ns-label
    resources:
      - name: valid-delete-annotation
        values:
          request.operation: DELETE
      - name: no-annotation-req-to-update
        values:
          request.operation: UPDATE
      - name: no-valid-delete-annotation
        values:
          request.operation: DELETE
